--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ethers": "^6.15.0",
     "ioredis": "^5.8.1",
     "joi": "^18.0.1",
+    "nodemailer": "^7.0.9",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.2",
     "web3-token": "^1.0.6"
