--- a/package.json
+++ b/package.json
@@ -20,25 +20,31 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.679.0",
+    "@aws-sdk/lib-storage": "^3.832.0",
+    "@aws-sdk/s3-request-presigner": "^3.740.0",
     "@grpc/grpc-js": "^1.14.0",
     "@grpc/proto-loader": "^0.8.0",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/microservices": "^10.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^11.2.0",
+    "aws-sdk": "^2.1692.0",
     "cache-manager": "^7.2.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "ethers": "^6.15.0",
     "ioredis": "^5.8.1",
     "joi": "^18.0.1",
+    "multer": "1.4.5-lts.1",
     "nodemailer": "^7.0.9",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.2",
+    "uuid": "9",
     "web3-token": "^1.0.6"
   },
   "devDependencies": {
