--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@aws-sdk/s3-request-presigner": "^3.740.0",
     "@grpc/grpc-js": "^1.14.0",
     "@grpc/proto-loader": "^0.8.0",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/bull": "^11.0.4",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
@@ -42,6 +44,10 @@
     "cache-manager": "^7.2.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "did-jwt-vc": "^3.2.15",
+    "did-resolver": "^4.1.0",
+    "ethr-did": "^3.0.5",
+    "ethr-did-resolver": "^10.1.9",
     "ethers": "^6.15.0",
     "ioredis": "^5.8.1",
     "joi": "^18.0.1",
