--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/websockets": "^11.1.6",
     "aws-sdk": "^2.1692.0",
     "bull": "^4.16.5",
     "cache-manager": "^7.2.4",
@@ -46,16 +48,18 @@
     "class-validator": "^0.14.2",
     "did-jwt-vc": "^3.2.15",
     "did-resolver": "^4.1.0",
+    "ethers": "^6.15.0",
     "ethr-did": "^3.0.5",
     "ethr-did-resolver": "^10.1.9",
-    "ethers": "^6.15.0",
+    "form-data": "^4.0.4",
     "ioredis": "^5.8.1",
     "joi": "^18.0.1",
     "multer": "1.4.5-lts.1",
     "nodemailer": "^7.0.9",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.2",
-    "uuid": "9",
+    "socket.io": "^4.8.1",
+    "uuid": "^9.0.1",
     "web3-token": "^1.0.6"
   },
   "devDependencies": {
